--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -148,6 +148,46 @@ body{
             border-right: 2px solid turquoise;
             border-bottom: 2px solid turquoise;
             margin-bottom: 50px;
+            img{
+                display: inline-block;
+                border-radius: 10px;
+                margin: auto;
+                width: 150px ;
+            }
+            .btn{
+                margin: 20px;
+                display: inline-block;
+                width: 25%;
+                padding:10px;
+                background: teal;
+                color:white;
+    
+                &:hover{
+                    background: black;
+                }
+            }
+            .btn-danger{
+                background: red;
+            }
+            .btn-warning{
+                background: rgb(255, 208, 0);
+            }
+            
+            .Person{
+
+                
+                h1{
+                    color: #34879e;
+                    // font-weight: 900;
+                }
+                .basic-data{
+                    font-size: 20px;
+                    padding: 10px;
+                    border:2px solid #444;
+                    background-color: #61dafb;
+                    color: #eee;
+                }
+            }
             .form{
                 padding-top: 50px;
                 width: 40%;
@@ -176,16 +216,13 @@ body{
                 width: 80%;
                 padding: 20px;
                 text-align: left;
-                .date{
-                    display: inline-block;
-                    margin-top: 20px;
+                border:3px solid #34879e;
+                margin: 8px;
+                .detail-item{
+                    display: block;
                     color:#444;
                 }
-                #p-big{
-                    margin-top: 20px;
-                    font-weight: 600;
-                    
-                }
+                
                 .image-wrap-big{
                     width: 80%;
                     img{
@@ -304,6 +341,8 @@ body{
                     display:none;
                 }
                 #menu-colap{
+                    font-size: 35px;
+                    color: rgba(97,218,251,1);
                     margin-top: 10px;
                     float: right;
                     width: 55px;
@@ -311,7 +350,7 @@ body{
                     display: block;
                     // padding: 10px;
                     line-height: 48px;
-                    border: 2px solid #444;
+                    // border: 2px solid #444;
                     &:hover{
                         background: #34879e;
                         color: white; 
